Done with assignment-1.

--- a/Accessing_OpenAI_Like_a_Developer_AIMS_(Assignment_Version).ipynb
+++ b/Accessing_OpenAI_Like_a_Developer_AIMS_(Assignment_Version).ipynb
@@ -594,7 +594,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -607,7 +607,7 @@
         {
           "data": {
             "text/markdown": [
-              "It does not matter which travel option Billy selects, as both options will get him home before 7PM EDT. If he chooses to fly and then take a bus, he will arrive home at 6PM local time. If he chooses to take the teleporter and then a bus, he will arrive home at 5PM local time. Both options will allow him to make it home before 7PM EDT."
+              "Yes, it matters which travel option Billy selects. If Billy wants to get home before 7PM EDT and it's currently 1PM local time, he would need to account for the time difference between San Francisco and EDT. With flying and taking a bus, it would take a total of 5 hours of travel time (3 hours for flying and 2 hours for the bus), which would mean he would arrive at 6PM local time. If he takes the teleporter and then a bus, it would only take a total of 1 hour of travel time (0 hours for the teleporter and 1 hour for the bus), allowing him to arrive home before 7PM EDT. Therefore, Billy should select the option of taking the teleporter and then a bus to ensure he gets home before 7PM EDT."
             ],
             "text/plain": [
               "<IPython.core.display.Markdown object>"
@@ -649,7 +649,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -662,13 +662,25 @@
         {
           "data": {
             "text/markdown": [
-              "It does matter which travel option Billy selects. \n",
+              "First, we need to determine the total travel time for each option:\n",
               "\n",
-              "If Billy chooses to fly and then take a bus, it will take a total of 3 hours for the flight and 2 hours for the bus, totaling 5 hours of travel time. Since it is currently 1PM local time, if Billy chooses this option, he will arrive home at 6PM EDT, which is before 7PM EDT.\n",
+              "1. Flying and then taking a bus:\n",
+              "- Flying: 3 hours\n",
+              "- Bus ride: 2 hours\n",
+              "Total: 3 hours (flying) + 2 hours (bus) = 5 hours\n",
               "\n",
-              "If Billy chooses to take the teleporter and then a bus, it will take a total of 0 hours for the teleporter and 1 hour for the bus, totaling 1 hour of travel time. Since it is currently 1PM local time, if Billy chooses this option, he will arrive home at 2PM EDT, which is well before 7PM EDT.\n",
+              "2. Using the teleporter and then taking a bus:\n",
+              "- Teleporter: 0 hours\n",
+              "- Bus ride: 1 hour\n",
+              "Total: 0 hours (teleporter) + 1 hour (bus) = 1 hour\n",
               "\n",
-              "Therefore, if Billy wants to ensure he arrives home before 7PM EDT, he should choose the option of taking the teleporter and then a bus, as it will result in him arriving home earlier than if he were to fly and then take a bus."
+              "Now, we need to consider the current time and Billy's desired arrival time. It is currently 1PM local time, and Billy needs to get home before 7PM EDT.\n",
+              "\n",
+              "If Billy chooses the flying and bus option, it will take 5 hours, which means he will arrive at 6PM local time. Since he needs to get home before 7PM EDT, this option will not guarantee that he will make it on time.\n",
+              "\n",
+              "On the other hand, if Billy selects the teleporter and bus option, it will only take 1 hour, and he will arrive at 2PM local time. This option will ensure that Billy gets home well before 7PM EDT.\n",
+              "\n",
+              "Therefore, in this scenario, it does matter which travel option Billy selects, and he should choose the teleporter and bus option to ensure he gets home on time."
             ],
             "text/plain": [
               "<IPython.core.display.Markdown object>"
@@ -730,27 +742,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
         "id": "8sOLBQPeKlDe"
       },
       "outputs": [],
       "source": [
         "system_template = \"\"\"\\\n",
-        "WRITE YOUR SYSTEM PROMPT HERE\n",
+        "You are a expert in aerodynamics\n",
         "\"\"\""
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 29,
       "metadata": {
         "id": "xoz4-QLTKvEV"
       },
       "outputs": [],
       "source": [
         "user_template = \"\"\"{input}\n",
-        "MODIFICATIONS HERE\n",
+        "Explain the answers,  like you are explaining to a 10 year old kids, go in detail as much as you know.\n",
         "\"\"\""
       ]
     },
@@ -767,13 +779,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 30,
       "metadata": {
         "id": "sPaNO5XTLgRJ"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/markdown": [
+              "Alright, let me explain it in a simple way for you to understand!\n",
+              "\n",
+              "Imagine the Airbus A380 as a big and heavy bird that can carry lots of people inside. Just like a bird uses its wings to fly, the A380 uses its wings to lift off the ground and stay up in the sky.\n",
+              "\n",
+              "The wings of the A380 are specially designed to create lift, which is the force that pushes the airplane up into the air. The shape of the wings, along with the engines that provide thrust, help the airplane to fly.\n",
+              "\n",
+              "Once the A380 is in the air, it needs to maintain its altitude, which means staying at the same height. The pilot controls the altitude by adjusting the angle of the airplane's wings and the speed of the engines. If the pilot wants the airplane to climb higher, they can tilt the nose of the airplane up a bit. If they want to descend, they can tilt the nose down a bit.\n",
+              "\n",
+              "The engines of the A380 also play a big role in maintaining its altitude. The engines provide thrust, which is the force that pushes the airplane forward. By adjusting the speed of the engines, the pilot can control how high or how low the airplane flies.\n",
+              "\n",
+              "So, in simple terms, the Airbus A380 flies with so many passengers by using its wings to create lift and its engines to provide thrust. Once in the air, the pilot can adjust the angle of the wings and the speed of the engines to maintain the airplane's altitude."
+            ],
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        }
+      ],
       "source": [
-        "query = \"YOUR QUERY HERE\"\n",
+        "query = \"how does such a big aeroplane like AirBus 380 fly with so many passengers and once in air how does it maintian its alltitude\"\n",
         "\n",
         "list_of_prompts = [\n",
         "    system_prompt(system_template),\n",
@@ -818,11 +853,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 31,
       "metadata": {
         "id": "OUvc1PdnNIKD"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/markdown": [
+              "{\"clarity\" : \"8\", \"faithfulness\" : \"7\", \"correctness\" : \"7\"}\n",
+              "\n",
+              "\n",
+              "\n",
+              "\n",
+              "          "
+            ],
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        }
+      ],
       "source": [
         "pretty_print(evaluator_response)"
       ]
